objects/CPM_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Extension</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>CPM Data</relationshipLabel>
        <relationshipName>CPM_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CPM Data</relationshipLabel>
        <relationshipName>CPM_Data</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>CPM Data</relationshipLabel>
        <relationshipName>CPM_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_AOV__c</fullName>
        <label>Actual AOV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Annual_Spend__c</fullName>
        <label>Actual Annual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Contract_Term__c</fullName>
        <label>Actual Contract Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Conversion_Rebate__c</fullName>
        <label>Actual Conversion Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Core_IMU__c</fullName>
        <label>Actual Core IMU %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Core_Items_Count__c</fullName>
        <label>Actual Core Items Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Core_Sales__c</fullName>
        <formula>Actual_Annual_Spend__c * Actual_Contract_Term__c * Actual_on_Core__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Core Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Cost_of_Credit__c</fullName>
        <label>Actual Cost of Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Delivery_Expense__c</fullName>
        <label>Actual Delivery Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Desktop_Delivery__c</fullName>
        <label>Actual Desktop Delivery %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Gross_IMU__c</fullName>
        <label>Actual Gross IMU %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Net_IMU__c</fullName>
        <label>Actual Net IMU %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Non_Core_IMU__c</fullName>
        <label>Actual Non-Core IMU %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Non_Core_Sales__c</fullName>
        <formula>Actual_on_Non_Core__c * Actual_Contract_Term__c * Actual_Annual_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Non-Core Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Operating_Profit__c</fullName>
        <label>Actual Operating Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Payment_Terms__c</fullName>
        <label>Actual Payment Terms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Performance_Rebate__c</fullName>
        <label>Actual Performance Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Pocket_Margin__c</fullName>
        <label>Actual Pocket Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Program_Dollars__c</fullName>
        <label>Actual Program Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_on_Core__c</fullName>
        <label>Actual % on Core</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_on_Non_Core__c</fullName>
        <formula>1- Actual_on_Core__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual % on Non-Core</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Analyst_Notes__c</fullName>
        <label>Analyst Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPM_Date_Time__c</fullName>
        <label>CPM Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CPM_Version__c</fullName>
        <label>CPM Version #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Vendor__c</fullName>
        <label>Current Vendor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Size__c</fullName>
        <label>Customer Size</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Contact__c</fullName>
        <label>Pricing Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Projected_AOV__c</fullName>
        <label>Projected AOV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Annual_Spend__c</fullName>
        <label>Projected Annual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Contract_Term__c</fullName>
        <label>Projected Contract Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Conversion_Rebate__c</fullName>
        <label>Projected Conversion Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Core_IMU__c</fullName>
        <label>Projected Core IMU %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Core_Items_Count__c</fullName>
        <label>Projected Core Items Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Core_Sales__c</fullName>
        <formula>Projected_Annual_Spend__c * Projected_Contract_Term__c * Projected_on_Core__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Core Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Cost_of_Credit__c</fullName>
        <label>Projected Cost of Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Delivery_Expense__c</fullName>
        <label>Projected Delivery Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Desktop_Delivery__c</fullName>
        <label>Projected Desktop Delivery %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Gross_IMU__c</fullName>
        <label>Projected Gross IMU %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Net_IMU__c</fullName>
        <label>Projected Net IMU %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Non_Core_IMU__c</fullName>
        <label>Projected Non-Core IMU %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Non_Core_Sales__c</fullName>
        <formula>Projected_Annual_Spend__c * Projected_Contract_Term__c * Projected_on_Non_Core__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Non-Core Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Operating_Profit__c</fullName>
        <label>Projected Operating Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Payment_Terms__c</fullName>
        <label>Projected Payment Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Performance_Rebate__c</fullName>
        <label>Projected Performance Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Pocket_Margin__c</fullName>
        <label>Projected Pocket Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Program_Dollars__c</fullName>
        <label>Projected Program Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Total_Sales__c</fullName>
        <formula>Projected_Annual_Spend__c * Projected_Contract_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Total Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_on_Core__c</fullName>
        <label>Projected % on Core</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_on_Non_Core__c</fullName>
        <formula>1- Projected_on_Core__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected % on Non-Core</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Support_Number__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CPM Data</relationshipLabel>
        <relationshipName>CPM_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CPM Data</label>
    <nameField>
        <displayFormat>CPM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPM Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>